[tool.poetry]
name = "vigibot"
version = "0.1.0"
description = "telegram and twitter bots"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "gplv3"

[tool.poetry.dependencies]
python = "^3.10"
emoji = "^1.7.0"
tweepy = "chatterbot2"
ChatterBot2 = "^1.1.0-alpha.7"
python-telegram-bot = "^13.12"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.3.9"
spacy = "^3.3.0"
geopy = "^2.2.0"
pandas = "^1.4.2"
PyYAML = "^6.0"
uuid = "^1.30"
python-dotenv = "^0.20.0"
instabot = "^0.117.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
