[tool.poetry]
name = "vigibot"
version = "0.1.0"
description = "telegram and twitter bots"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "gplv3"

[tool.poetry.dependencies]


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
