[tool.poetry]
name = "vigibot"
version = "0.1.0"
description = "telegram and twitter bots"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "gplv3"
packages = [{include='app'}]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[tool.black]
# https://github.com/psf/black
target-version = ["py37"]
line_length = 79
skip-string-normalization = true
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | migrations/*
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 79

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
